--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,13 @@
         <activity android:name=".CroppingActivity" >
 
         </activity>
+        <activity android:name=".CameraActivity" >
+
+        </activity>
+        <activity android:name=".EditingActivity" >
+
+        </activity>
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.android.fileprovider"
